--- a/ZodiacTeller.html
+++ b/ZodiacTeller.html
@@ -15,12 +15,7 @@
       </table>
    </body>
    <script> 
-/*
-یہ وہ کوڈ ہے جو سانچے کے ساتھ آیا ہے ، اس کی ضرورت ہے۔
-This is the code that came with the template, its required
-*/
-      // -------------  Constants ----------------
-      
+
       	const SECONDS_PER_YEAR = 31557600;
       	const SECONDS_PER_DAY = 60 * 60 * 24;
       	const MILLISECONDS_PER_SECOND = 1000;
@@ -133,46 +128,20 @@ This is the code that came with the template, its required
       	,	"https://tau.usq.edu.au/staff/braithwaite/Courses/CSC1401/Zodiac/pisces.png"
       	];
       
-	  // -----------  Input -------------
-/*
-یہ ان پٹ کوڈ ہے ، یہ صارف سے ان کی تفصیلات جیسے دن ، مہینہ اور سال پیدائش کے بارے میں پوچھنے کے لیے فوری فنکشن کا استعمال کرتا ہے
-This is the input code, it uses the prompt function to ask the user for their details such as day, month and year of birth
-*/
-      	var dayOfBirth = prompt(PROMPT_DAY_OF_BIRTH)
-		/*
-		ماہ کا نمبر حاصل کرنے کے لیے مہینے کی صف کو انڈیکس کرنے کے لیے پہلے 3 حروف میں کاٹنا ضروری ہے۔
-		The month required to be cut into the first 3 letters to index the month array to get the number of the month
-		*/
-      	var MonthOfBirthStr = prompt(PROMPT_MONTH_OF_BIRTH).toString().slice(0, 3)
-      	var yearOfBirth = prompt(PROMPT_YEAR_OF_BIRTH)
 
-      // -----------  Calculations -------------
-	  	/*
-		  یہ کوڈ مناسب حساب کرتا ہے جو صفوں کو انڈیکس کرنے اور آؤٹ پٹ تیار کرنے کے لیے درکار ہوتا ہے۔
-		  This code does the appropriate calculations that are required to index the arrays and produce the output
-		  */
-      	const monthOfBirth = months[MonthOfBirthStr]
-      	let DOB = new Date(`${yearOfBirth}-${monthOfBirth}-${dayOfBirth}`).valueOf()
-      	const CurrentDate = new Date().valueOf()
-      	var NumberOfMilliseconds = ( CurrentDate - DOB )/1000
-      	var NumberOfSecondsPerYear = 31540000
-      	var NumberOfYearsAlive= Math.floor((NumberOfMilliseconds / NumberOfSecondsPerYear));
-
-      // -----------  Calculations -------------
-	  /*
-	  یہ کوڈ ان اقدار کو تیار اور تیار کرتا ہے جو آؤٹ پٹ ہونے جا رہے ہیں۔
-	  This code creates and ready the values which are going to be outputted
-	  */
-      var zodiacSign  = ZODIAC_DAY_MONTH[parseInt(monthOfBirth)][parseInt(dayOfBirth)]
-      var zodiacName  = ZODIAC_NAME[zodiacSign] 
-      var zodiacRuler = ZODIAC_RULER[zodiacSign]
+	  const CurrentDate = new Date().valueOf()
+	  const monthOfBirth = months[MonthOfBirthStr]
+      let dayOfBirth = prompt(PROMPT_DAY_OF_BIRTH)
+      let MonthOfBirthStr = prompt(PROMPT_MONTH_OF_BIRTH).toString().slice(0, 3)
+      let yearOfBirth = prompt(PROMPT_YEAR_OF_BIRTH)
+      let DOB = new Date(`${yearOfBirth}-${monthOfBirth}-${dayOfBirth}`).valueOf()
+      let NumberOfMilliseconds = ( CurrentDate - DOB )/1000
+      let NumberOfSecondsPerYear = 31540000
+      let NumberOfYearsAlive= Math.floor((NumberOfMilliseconds / NumberOfSecondsPerYear));
+      let zodiacSign  = ZODIAC_DAY_MONTH[parseInt(monthOfBirth)][parseInt(dayOfBirth)]
+      let zodiacName  = ZODIAC_NAME[zodiacSign] 
+      let zodiacRuler = ZODIAC_RULER[zodiacSign]
       let zodiacImage = ZODIAC_IMG[zodiacSign-1]
-      // -----------  Output -------------
-	  /*
-	  یہ وہ کوڈ ہے جو صارف کی رقم اور علامات کو آؤٹ پٹ کرتا ہے۔ یہ جاوا اسکرپٹ کے ذریعہ تیار کردہ معلومات کو شامل کرنے کے لئے DOM کا استعمال کرتا ہے۔
-	  This is the code which outputs the user's zodiac signs and symbols. It uses DOM to append the information produced by javascript
-	  */
       let data = document.getElementById('data').innerHTML += `<td>${zodiacName}</td> <td>${zodiacRuler}</td> <img style="padding-left:20px;" src='${zodiacImage}'></img>`
-
    </script> 
 </html>
